# RAG-Service

./: .gitignore  README.md  pyproject.toml  server.py
docs/: rag-service-faq.md
docs/superpowers/plans/: 2026-05-12-rag-service-plan.md  2026-05-13-chunking-optimization-plan.md
docs/superpowers/specs/: 2026-05-12-rag-service-design.md  2026-05-13-chunking-optimization-design.md
rag_service/: __init__.py  chunker.py  embedder.py  errors.py  indexer.py  retriever.py  service.py  types.py
static/: index.html
tests/: conftest.py  test_chunker.py  test_embedder.py  test_errors.py  test_indexer.py  test_retriever.py  test_service.py  test_types.py
