[project]
name = "rag-service"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "faiss-cpu>=1.8",
    "FlagEmbedding>=1.3",
    "transformers>=4.36",
    "torch>=2.1",
    "safetensors>=0.4",
    "huggingface-hub>=0.20",
    "filelock>=3.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
